[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/System/MenuShop.gd" type="Script" id=1]
[ext_resource path="res://Fonts/FontDlg.tres" type="DynamicFont" id=2]
[ext_resource path="res://Instances/System/Button.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sprites/Items/ItemTemp.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Polygon2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2, 1 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 48, 26 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/Polygon2D2:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1.3 ),
"transitions": PoolRealArray( 0.5, 0.5, 1 ),
"update": 0,
"values": [ Vector2( -32, -30 ), Vector2( -32, -30 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("CanvasLayer/Button")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "appear"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanvasLayer/Background:color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.0470588, 0.0745098, 0.137255, 0 ), Color( 0.0470588, 0.0745098, 0.137255, 1 ) ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("CanvasLayer/Item1")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "appear"
} ]
}
tracks/5/type = "method"
tracks/5/path = NodePath("CanvasLayer/Item2")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "appear"
} ]
}
tracks/6/type = "method"
tracks/6/path = NodePath("CanvasLayer/Item3")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "appear"
} ]
}
tracks/7/type = "method"
tracks/7/path = NodePath("CanvasLayer/Item4")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "appear"
} ]
}

[node name="MenuShop" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Background" type="ColorRect" parent="CanvasLayer"]
margin_left = 80.0
margin_top = 18.0
margin_right = 240.0
margin_bottom = 162.0
mouse_filter = 2
color = Color( 0.0470588, 0.0745098, 0.137255, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Polygon2D" type="Polygon2D" parent="CanvasLayer"]
position = Vector2( 48, 26 )
color = Color( 0.0901961, 0.145098, 0.27451, 1 )
polygon = PoolVector2Array( 248, 98, 176, 154, 96, 170, 248, 170 )

[node name="Polygon2D2" type="Polygon2D" parent="CanvasLayer"]
position = Vector2( -32, -30 )
color = Color( 0.0805664, 0.129801, 0.257813, 1 )
polygon = PoolVector2Array( 88, 42, 184, 18, 184, 10, 56, 10, 80, 106 )

[node name="Label" type="Label" parent="CanvasLayer/Polygon2D2"]
margin_left = 84.0
margin_top = 30.0
margin_right = 159.0
margin_bottom = 44.0
rect_rotation = -12.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.619608, 0.733333, 1, 1 )
text = "Pace's Shop"

[node name="Button" parent="CanvasLayer" instance=ExtResource( 3 )]
position = Vector2( 108, 148 )
polygon = PoolVector2Array( 39, 23, 73, 23, 74, 8, 37, 7 )
button_text = "Exit"
idle_y = -1.0

[node name="Item1" parent="CanvasLayer" instance=ExtResource( 3 )]
position = Vector2( 126, 65 )
polygon = PoolVector2Array( 38, 30, 72, 31, 74, 1, 37, -1 )
button_image = ExtResource( 4 )
idle_y = -1.0

[node name="Item2" parent="CanvasLayer" instance=ExtResource( 3 )]
position = Vector2( 188, 66 )
polygon = PoolVector2Array( 38, 32, 72, 31, 70, 1, 40, 0 )
button_image = ExtResource( 4 )
idle_y = -1.0

[node name="Item3" parent="CanvasLayer" instance=ExtResource( 3 )]
position = Vector2( 122, 111 )
polygon = PoolVector2Array( 38, 30, 71, 30, 72, 3, 40, 0 )
button_image = ExtResource( 4 )
idle_y = -1.0

[node name="Item4" parent="CanvasLayer" instance=ExtResource( 3 )]
position = Vector2( 179, 111 )
polygon = PoolVector2Array( 39, 30, 70, 30, 73, 1, 37, 2 )
button_image = ExtResource( 4 )
idle_y = -1.0

[node name="ItemName" type="Label" parent="CanvasLayer"]
margin_left = 73.0
margin_top = 32.0
margin_right = 306.0
margin_bottom = 46.0
custom_fonts/font = ExtResource( 2 )
text = "A very very very long item name here"
align = 1

[node name="ItemDesc" type="Label" parent="CanvasLayer"]
margin_left = 135.0
margin_top = 138.0
margin_right = 236.0
margin_bottom = 171.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.486275, 0.639216, 1, 1 )
text = "A very very very long item desc here"
align = 1
autowrap = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Appear = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true
[connection signal="hover_end" from="CanvasLayer/Item1" to="." method="set_hover_index" binds= [ -1 ]]
[connection signal="hover_start" from="CanvasLayer/Item1" to="." method="set_hover_index" binds= [ 0 ]]
[connection signal="hover_end" from="CanvasLayer/Item2" to="." method="set_hover_index" binds= [ -1 ]]
[connection signal="hover_start" from="CanvasLayer/Item2" to="." method="set_hover_index" binds= [ 1 ]]
[connection signal="hover_end" from="CanvasLayer/Item3" to="." method="set_hover_index" binds= [ -1 ]]
[connection signal="hover_start" from="CanvasLayer/Item3" to="." method="set_hover_index" binds= [ 2 ]]
[connection signal="hover_end" from="CanvasLayer/Item4" to="." method="set_hover_index" binds= [ -1 ]]
[connection signal="hover_start" from="CanvasLayer/Item4" to="." method="set_hover_index" binds= [ 3 ]]
[connection signal="timeout" from="Timer" to="AnimationPlayer" method="play" binds= [ "Appear" ]]
